--- a/alight.vcxproj.filters
+++ b/alight.vcxproj.filters
@@ -58,6 +58,24 @@
     <ClCompile Include="..\..\..\addons\ofxVectorGraphics\libs\CreEPS.cpp">
       <Filter>addons\ofxVectorGraphics\libs</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\..\addons\ofxXmlSettings\src\ofxXmlSettings.cpp">
+      <Filter>addons\ofxXmlSettings\src</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\addons\ofxXmlSettings\libs\tinyxml.cpp">
+      <Filter>addons\ofxXmlSettings\libs</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\addons\ofxXmlSettings\libs\tinyxmlerror.cpp">
+      <Filter>addons\ofxXmlSettings\libs</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\addons\ofxXmlSettings\libs\tinyxmlparser.cpp">
+      <Filter>addons\ofxXmlSettings\libs</Filter>
+    </ClCompile>
+    <ClCompile Include="src\UI.cpp">
+      <Filter>src</Filter>
+    </ClCompile>
+    <ClCompile Include="src\Network.cpp">
+      <Filter>src</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <Filter Include="src">
@@ -96,11 +114,20 @@
     <Filter Include="addons\ofxVectorGraphics\libs">
       <UniqueIdentifier>{B341F552-35C4-7EB6-B3C9-9D96}</UniqueIdentifier>
     </Filter>
+    <Filter Include="addons\ofxXmlSettings">
+      <UniqueIdentifier>{877F005D-13E6-0592-1D97-F2E3}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="addons\ofxXmlSettings\src">
+      <UniqueIdentifier>{CCB2AC63-49D2-977C-CFE8-AEAD}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="addons\ofxXmlSettings\libs">
+      <UniqueIdentifier>{687714A8-1662-FA1C-261F-50F0}</UniqueIdentifier>
+    </Filter>
     <Filter Include="addons\ofxUI">
-      <UniqueIdentifier>{a7eb3317-1783-4e21-91a6-fb2a0989ca1b}</UniqueIdentifier>
+      <UniqueIdentifier>{B492C5B0-FF91-9C5A-638A-3142}</UniqueIdentifier>
     </Filter>
     <Filter Include="addons\ofxUI\src">
-      <UniqueIdentifier>{72711898-d6be-4911-8ef9-84732bb3fa63}</UniqueIdentifier>
+      <UniqueIdentifier>{A00C2D23-6C11-BC86-3993-2CF0}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
@@ -176,59 +203,11 @@
     <ClInclude Include="..\..\..\addons\ofxVectorGraphics\libs\CreEPS_Types.hpp">
       <Filter>addons\ofxVectorGraphics\libs</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\..\addons\ofxUI\src\ofxUIRangeSlider.h">
-      <Filter>addons\ofxUI\src</Filter>
+    <ClInclude Include="..\..\..\addons\ofxXmlSettings\src\ofxXmlSettings.h">
+      <Filter>addons\ofxXmlSettings\src</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\..\addons\ofxUI\src\ofxUIRectangle.h">
-      <Filter>addons\ofxUI\src</Filter>
-    </ClInclude>
-    <ClInclude Include="..\..\..\addons\ofxUI\src\ofxUIRotarySlider.h">
-      <Filter>addons\ofxUI\src</Filter>
-    </ClInclude>
-    <ClInclude Include="..\..\..\addons\ofxUI\src\ofxUIScrollableCanvas.h">
-      <Filter>addons\ofxUI\src</Filter>
-    </ClInclude>
-    <ClInclude Include="..\..\..\addons\ofxUI\src\ofxUISlider.h">
-      <Filter>addons\ofxUI\src</Filter>
-    </ClInclude>
-    <ClInclude Include="..\..\..\addons\ofxUI\src\ofxUISpacer.h">
-      <Filter>addons\ofxUI\src</Filter>
-    </ClInclude>
-    <ClInclude Include="..\..\..\addons\ofxUI\src\ofxUISpectrum.h">
-      <Filter>addons\ofxUI\src</Filter>
-    </ClInclude>
-    <ClInclude Include="..\..\..\addons\ofxUI\src\ofxUISuperCanvas.h">
-      <Filter>addons\ofxUI\src</Filter>
-    </ClInclude>
-    <ClInclude Include="..\..\..\addons\ofxUI\src\ofxUITabBar.h">
-      <Filter>addons\ofxUI\src</Filter>
-    </ClInclude>
-    <ClInclude Include="..\..\..\addons\ofxUI\src\ofxUITextArea.h">
-      <Filter>addons\ofxUI\src</Filter>
-    </ClInclude>
-    <ClInclude Include="..\..\..\addons\ofxUI\src\ofxUITextInput.h">
-      <Filter>addons\ofxUI\src</Filter>
-    </ClInclude>
-    <ClInclude Include="..\..\..\addons\ofxUI\src\ofxUIToggle.h">
-      <Filter>addons\ofxUI\src</Filter>
-    </ClInclude>
-    <ClInclude Include="..\..\..\addons\ofxUI\src\ofxUIToggleMatrix.h">
-      <Filter>addons\ofxUI\src</Filter>
-    </ClInclude>
-    <ClInclude Include="..\..\..\addons\ofxUI\src\ofxUIUtils.h">
-      <Filter>addons\ofxUI\src</Filter>
-    </ClInclude>
-    <ClInclude Include="..\..\..\addons\ofxUI\src\ofxUIValuePlotter.h">
-      <Filter>addons\ofxUI\src</Filter>
-    </ClInclude>
-    <ClInclude Include="..\..\..\addons\ofxUI\src\ofxUIWaveform.h">
-      <Filter>addons\ofxUI\src</Filter>
-    </ClInclude>
-    <ClInclude Include="..\..\..\addons\ofxUI\src\ofxUIWidget.h">
-      <Filter>addons\ofxUI\src</Filter>
-    </ClInclude>
-    <ClInclude Include="..\..\..\addons\ofxUI\src\ofxUIWidgetWithLabel.h">
-      <Filter>addons\ofxUI\src</Filter>
+    <ClInclude Include="..\..\..\addons\ofxXmlSettings\libs\tinyxml.h">
+      <Filter>addons\ofxXmlSettings\libs</Filter>
     </ClInclude>
     <ClInclude Include="..\..\..\addons\ofxUI\src\ofxUI.h">
       <Filter>addons\ofxUI\src</Filter>
@@ -319,6 +298,66 @@
     </ClInclude>
     <ClInclude Include="..\..\..\addons\ofxUI\src\ofxUIRadio.h">
       <Filter>addons\ofxUI\src</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\addons\ofxUI\src\ofxUIRangeSlider.h">
+      <Filter>addons\ofxUI\src</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\addons\ofxUI\src\ofxUIRectangle.h">
+      <Filter>addons\ofxUI\src</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\addons\ofxUI\src\ofxUIRotarySlider.h">
+      <Filter>addons\ofxUI\src</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\addons\ofxUI\src\ofxUIScrollableCanvas.h">
+      <Filter>addons\ofxUI\src</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\addons\ofxUI\src\ofxUISlider.h">
+      <Filter>addons\ofxUI\src</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\addons\ofxUI\src\ofxUISpacer.h">
+      <Filter>addons\ofxUI\src</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\addons\ofxUI\src\ofxUISpectrum.h">
+      <Filter>addons\ofxUI\src</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\addons\ofxUI\src\ofxUISuperCanvas.h">
+      <Filter>addons\ofxUI\src</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\addons\ofxUI\src\ofxUITabBar.h">
+      <Filter>addons\ofxUI\src</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\addons\ofxUI\src\ofxUITextArea.h">
+      <Filter>addons\ofxUI\src</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\addons\ofxUI\src\ofxUITextInput.h">
+      <Filter>addons\ofxUI\src</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\addons\ofxUI\src\ofxUIToggle.h">
+      <Filter>addons\ofxUI\src</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\addons\ofxUI\src\ofxUIToggleMatrix.h">
+      <Filter>addons\ofxUI\src</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\addons\ofxUI\src\ofxUIUtils.h">
+      <Filter>addons\ofxUI\src</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\addons\ofxUI\src\ofxUIValuePlotter.h">
+      <Filter>addons\ofxUI\src</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\addons\ofxUI\src\ofxUIWaveform.h">
+      <Filter>addons\ofxUI\src</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\addons\ofxUI\src\ofxUIWidget.h">
+      <Filter>addons\ofxUI\src</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\addons\ofxUI\src\ofxUIWidgetWithLabel.h">
+      <Filter>addons\ofxUI\src</Filter>
+    </ClInclude>
+    <ClInclude Include="src\UI.h">
+      <Filter>src</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Sound.h">
+      <Filter>src</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
