--- a/alight.vcxproj.filters
+++ b/alight.vcxproj.filters
@@ -85,6 +85,9 @@
     <ClCompile Include="src\scenes\BaseScene.cpp">
       <Filter>src\scenes</Filter>
     </ClCompile>
+    <ClCompile Include="src\fft.cpp">
+      <Filter>src</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <Filter Include="src">
@@ -379,6 +382,9 @@
     </ClInclude>
     <ClInclude Include="src\scenes\BaseScene.h">
       <Filter>src\scenes</Filter>
+    </ClInclude>
+    <ClInclude Include="src\fft.h">
+      <Filter>src</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
