Meteorites実装開始．複数の星の初期化終了
パーティクルエンジンとして分離，再利用したほうが良いかも．

--- a/alight.vcxproj
+++ b/alight.vcxproj
@@ -95,6 +95,7 @@
     <ClCompile Include="src\Network.cpp" />
     <ClCompile Include="src\SceneControl.cpp" />
     <ClCompile Include="src\scenes\BaseScene.cpp" />
+    <ClCompile Include="src\scenes\Meteorites.cpp" />
     <ClCompile Include="src\scenes\Pause.cpp" />
     <ClCompile Include="src\Sound.cpp" />
     <ClCompile Include="src\testApp.cpp" />
@@ -125,6 +126,7 @@
     <ClInclude Include="src\fft.h" />
     <ClInclude Include="src\SceneControl.h" />
     <ClInclude Include="src\scenes\BaseScene.h" />
+    <ClInclude Include="src\scenes\Meteorites.h" />
     <ClInclude Include="src\scenes\Pause.h" />
     <ClInclude Include="src\Sound.h" />
     <ClInclude Include="src\testApp.h" />
