--- a/alight.vcxproj
+++ b/alight.vcxproj
@@ -97,6 +97,7 @@
     <ClCompile Include="src\scenes\BaseScene.cpp" />
     <ClCompile Include="src\scenes\Meteorites.cpp" />
     <ClCompile Include="src\scenes\Pause.cpp" />
+    <ClCompile Include="src\scenes\SevenLED.cpp" />
     <ClCompile Include="src\Sound.cpp" />
     <ClCompile Include="src\testApp.cpp" />
     <ClCompile Include="..\..\..\addons\ofx3DModelLoader\src\3DS\model3DS.cpp" />
@@ -128,6 +129,7 @@
     <ClInclude Include="src\scenes\BaseScene.h" />
     <ClInclude Include="src\scenes\Meteorites.h" />
     <ClInclude Include="src\scenes\Pause.h" />
+    <ClInclude Include="src\scenes\SevenLED.h" />
     <ClInclude Include="src\Sound.h" />
     <ClInclude Include="src\testApp.h" />
     <ClInclude Include="..\..\..\addons\ofx3DModelLoader\src\3DS\model3DS.h" />
